@@ -1,5 +1,8 @@
 2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* gtk/gtkmodule.c (_pygtk_log_func): Call g_log_default_handler
+	when python isn't initialized.  Fixes #334188.
+
 	* examples/Makefile.am (EXTRA_DIST): Ship new editable interface example.
 
 	* examples/gobject/editable-interface.py: Add small example of
